--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <spring.version>5.3.14</spring.version>
         <thymeleaf.version>3.0.14.RELEASE</thymeleaf.version>
         <fastjson.version>1.2.79</fastjson.version>
+        <hutool.version>5.7.20</hutool.version>
     </properties>
 
     <modules>
@@ -62,6 +63,12 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
                 <version>${fastjson.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-core</artifactId>
+                <version>${hutool.version}</version>
             </dependency>
 
             <!-- 日志 -->
