--- a/daisy-web/pom.xml
+++ b/daisy-web/pom.xml
@@ -13,6 +13,12 @@
     <packaging>jar</packaging>
 
     <description>使用netty实现http服务</description>
+    
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>1.8</java.version>
+	</properties>
 
     <dependencies>
         <dependency>
